<resources>
    <string name="app_name">UIBasics1</string>
    <string name="setup_plan">Setup your Plan</string>
    <string name="textview2">You can change it anytime in the settings</string>
    <string name="textview3">Setup Wizard</string>
    <string name="textview4">RECOMMENDED</string>

    <string name="textview5">Start From Scratch</string>
    <string name="textview6">FOR EXPERTS</string>

    <string name="textview7">Templates</string>
    <string name="textview8">FOR COMPLETE BEGINNERS</string>

    <string name="textview9">\t 2,340 \t \t \t 18</string>
    <string name="textview10"> \t\t points \t\t\t\t\t friends</string>
    <string name="textview11">My Reports</string>
    <string name="textview12">Writer, speaker, life + fitness coach. Movement\n
    in your body creates movement in your life.\n
    Creater of Shrink Session Workout.</string>
    <string name="textview13">Hannah johnson</string>
    <string name="textview14">Lose weight</string>
    <string name="textview15">TODAY</string>
    <string name="textview16">28 Aug 2018</string>
    <string name="textview17">You didnt start a program yet,these</string>

    <!-- String  for mockup-2    -->
    <string name="textview18">Enquiry</string>
    <string name="textview19">Select Country</string>
    <string name="textview20">Country</string>
    <string name="textview21">Select State</string>
    <string name="textview22">State</string>
    <string name="textview23">Select District</string>
    <string name="textview24">District</string>
    <string name="textview25">Select Center</string>
    <string name="textview26">Centre Name</string>
    <string name="textview27">SELECT CENTRE</string>
    <string name="textview28">Automatically Find Nearest Centre</string>

    <!-- String  for mockup-1   -->

    <string name="t1">Google Play</string>
    <string name="t2">APPS</string>
    <string name="t3">MOVIES AND TV</string>
    <string name="t4">BOOKS</string>
    <string name="t5">GAMES</string>
    <string name="t6">MUSIC</string>
    <string name="t7">NEWSSTAND</string>
    <string name="t8">New + Update Games</string>
    <string name="t9">MORE</string>
    <string name="t10">Monster\t Legends</string>
    <string name="t11">Mighty\nSmightie</string>
    <string name="t12">Marvel\nContestof</string>
    <string name="t13">Popular Apps + Games</string>

</resources>
