<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centre_background">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="268dp"
        android:layout_height="184dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/enquiry_bk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:text="@string/textview18"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="445dp"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/mock_back"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:text="@string/textview19"
            android:textColor="#1E88E5"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview20"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="330dp"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="#1E88E5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview21"
            android:textColor="#1E88E5"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview22"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="330dp"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="#1E88E5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview23"
            android:textColor="#1E88E5"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview24"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="330dp"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="#1E88E5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview25"
            android:textColor="#1E88E5"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/textview26"
            android:textColor="#000000"
            android:textSize="20sp" />

        <View
            android:layout_width="330dp"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:background="#1E88E5" />

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/centre_button"
            android:text="@string/textview27"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="15dp"
            android:text="@string/textview28"
            android:textColor="#0480ED"

            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>