<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E5E2"
    android:orientation="vertical"
    android:weightSum="1">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical">

        <ImageView
            android:layout_width="103dp"
            android:layout_height="93dp"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:background="@drawable/image_border"
            android:scaleType="fitXY"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_baseline_supervisor_account_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/textview13"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:text="@string/textview14"
            android:textColor="#5A5656"
            android:textSize="15sp"
            android:textStyle="normal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview9"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/textview10"
            android:textColor="#000000"
            android:textSize="10sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rectangle4"
            android:text="@string/textview11"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview12"
            android:layout_marginLeft="15dp"
            android:textColor="#000000"
            android:textAlignment="textStart"
            android:textSize="18sp"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_margin="10dp"
        android:background="#D5D0D0"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/image"
            android:src="@drawable/fire" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/photo"
            android:src="@drawable/ic_baseline_person_24" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/photo"
            android:src="@drawable/ic_baseline_person_25" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/photo"
            android:src="@drawable/ic_baseline_person_26" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/photo"
            android:src="@drawable/ic_baseline_person_27" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_margin="1dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:text="@string/textview15"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview16"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:textColor="#5A5656"
            android:textSize="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/run"
            android:src="@drawable/ic_outline_directions_run_30" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/textview17"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:layout_margin="1dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/bg_rectangle4"
            android:scaleType="fitXY"
            android:scaleX="0.8"
            android:scaleY="0.5"
            android:src="@drawable/ic_baseline_supervisor_account_24" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/bg_rectangle"
            android:scaleType="fitXY"
            android:scaleX="0.8"
            android:scaleY="0.5"
            android:src="@drawable/ic_baseline_supervisor_account_24" />
    </LinearLayout>
</LinearLayout>