<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#D8D3D3"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/setup_plan"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/textview2"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_rectangle">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="50dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview3"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20sp" />


                <View
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="15dp"
                    android:background="#ffffff"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/textview4"
                    android:textSize="15sp"
                    android:textColor="#ffffff" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pie_chart_img" />

            </LinearLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_rectangl2">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/equilizer" />


            <TextView
                android:id="@+id/tv_startfromscratch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:text="@string/textview5"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20sp" />


            <View
                android:id="@+id/vw_startfromscratch"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_below="@+id/tv_startfromscratch"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vw_startfromscratch"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:text="@string/textview6"
                android:textColor="#ffffff" />


        </RelativeLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_rectangle3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:text="@string/textview7"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <View
                android:id="@+id/view3"
                android:layout_width="60dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textview8"
                android:textColor="#ffffff"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/note"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</ScrollView>